https://manparvesh.com/post/2017-08-15-understand-java-project-structure/
Added:
	Compile and Run (car)
	Load project from CLI ($ clide -p <project>)
	Langauges pull compiler/interpreter from clide.conf
	adding packages with source code (Lang.Java)
	Use custom project templates
	Provided better support for Java Projects (Lang.Java)
	project mode addition is in progress (ie main vs test)
	begun adding project type support (project/Template/<Lang>.<type>)
	listing compiled code ($ clide --list-cpl <language>)
	Java project run and compile (.class and .jar) much like standard programs (Lang.Java)
	Java projects are made to compile with the name of the project (Lang.Java)

Concept:
	Managing different project types

Bug Fixes:
	"install" on projects and non-projects (issue: projects would not be installed in .bash_aliases)
	"AddAlias.sh" was not finding "errorCode.sh"
	performance improvements (CLI User Interface only changes after TRUE changes)
	code refactering
	moved Compile error message to "errorCode.sh"
	removed .h support from Go support (Lang.Go)
	fixed argument handling of pre-compiling code
	performance improvements (converted 'tr A-Z a-z' to '${var,,}')
	improving repo support
	refactored code in Java language support (Lang.Java)