@@ -3,7 +3,14 @@
 #1st # = Overflow
 #2nd # = Additional features
 #3rd # = Bug/code tweaks/fixes
-Version=0.81.56
+Version=0.81.57
+
+#cl[ide] colors
+#{
+IDEcolor=1
+CLcolor=0
+BKTcolor=0
+#}
 
 #cl[ide] config
 #{
