@@ -11,6 +11,7 @@ Added:
 	listing compiled code ($ clide --list-cpl <language>)
 	Java project run and compile (.class and .jar) much like standard programs (Lang.Java)
 	Java projects are made to compile with the name of the project (Lang.Java)
+	Change the CLI logo for cl[ide] using the config file (var/clide.conf)
 
 Concept:
 	Managing different project types
